<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.frocerie.demoalqalam.WeeklyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/tvReg"
                android:textColor="@color/colorHidline"
                android:text="@string/sunday"
                android:textSize="16sp"
                android:paddingLeft="2dp"
                android:gravity="clip_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tvSub"
                android:textColor="@color/colorHidline"
                android:text="@string/sub"
                android:textSize="15sp"
                android:paddingLeft="2dp"
                android:gravity="fill_vertical"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="5dp" />
            <TextView
                android:id="@+id/tvHi"
                android:text="- Tajweed"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="- Qur’an"
                android:id="@+id/tvtaj"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="- Urdu"
                android:id="@+id/tvDa"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="- Arabic"
                android:id="@+id/tvIsl"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="-  Dua"
                android:id="@+id/tvAr"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvTime"
                android:textColor="@color/colorHidline"
                android:text="@string/time"
                android:textSize="15sp"
                android:paddingLeft="2dp"
                android:gravity="fill_vertical"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="5dp" />
            <TextView
                android:id="@+id/tvSix"
                android:text="- 6:30AM to 9:00AM"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
